# Gazetalk--Synthetic-User-Simulator

./: README.md  pyproject.toml
examples/: personas.json
src/gazetalk_simulator/: __init__.py  cli.py  core.py
tests/: test_smoke.py
