[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gazetalk-simulator"
version = "0.1.0"
description = "Persona-conditioned synthetic patient simulator for a GazeTalk-style interface"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Qianyi Qin"}
]
dependencies = [
  "openai>=1.30.0"
]
keywords = ["aac", "gaze", "simulation", "aphasia", "synthetic-user"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[project.scripts]
gazetalk-sim = "gazetalk_simulator.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
